@@ -1,7 +1,6 @@
 package at.wrk.fmd.geobroker.startup.initial;
 
 import at.wrk.fmd.geobroker.contract.unit.ConfiguredUnit;
-import com.google.common.collect.ImmutableList;
 import org.apache.commons.lang3.builder.ToStringBuilder;
 
 import java.util.List;
@@ -10,7 +9,7 @@ public class InitialConfiguration {
     private final List<ConfiguredUnit> initialUnits;
 
     public InitialConfiguration(final List<ConfiguredUnit> initialUnits) {
-        this.initialUnits = initialUnits == null ? ImmutableList.of() : ImmutableList.copyOf(initialUnits);
+        this.initialUnits = initialUnits == null ? List.of() : List.copyOf(initialUnits);
     }
 
     public List<ConfiguredUnit> getInitialUnits() {
